--- a/src/components/Button/button.style.css
+++ b/src/components/Button/button.style.css
@@ -14,9 +14,9 @@
 	border: none;
 	border-radius: 4px;
 	cursor: pointer;
-	margin: 10px;
+	margin: 5px;
 	transition: 0.2s;
-	align-self: center;
+	align-self: flex-start;
 }
 
 .button:hover {
