--- a/src/components/FormGenerator/formgenerator.style.css
+++ b/src/components/FormGenerator/formgenerator.style.css
@@ -1,6 +1,10 @@
 .form {
-  box-sizing: border-box;
-  display: flex;
-  flex-direction: column;
-  padding: 10px;
+	box-sizing: border-box;
+	display: flex;
+	flex-direction: column;
+	padding: 10px;
+}
+
+h1 {
+	margin: 5px;
 }
